# kyubey

./: .env  .gitignore  Cargo.toml  Containerfile  README.md  bacon.toml  build.rs  deny.toml  justfile  package-lock.json  package.json  tailwind.css  trivy.yaml
.github/workflows/: docker.yaml  html.yaml  rust.yaml  trivy.yaml
.sqlx/: query-171a2aee573a4b01375655facfd6c9a82592241a876caf810202514a1bf00cee.json  query-30bf915db8e908cbc19599c688c4a00098abfb1204c197619937e713b8b5685d.json  query-3c0cde4a476dd1c106ad1d9c69ab6b7fb275a673a7b0ae26707d7b5d2b431772.json  query-47c7d11484582986b4d16662d47465dbbe41acdf6b4bbde3973cec5b563ec10d.json  query-53180059ebe668cfa3ab08a34c1e538c2f1dbca11bf56e2e7ad91ca1eec0cb0d.json  query-58cfe8ddd76abfd10e888e07d6eb27ccedf5c6f44ad8e68208c20c1b5c537514.json  query-7675960733d33362883b048b620319dfa6ae98b13a63f904c87e9ff15ea4fb10.json  query-9dca9d2afdb5594df03b094480cc7771d245fdecfc659d5adae0cfe443bef476.json  query-9ec04920a3063d422431ee495f70dfbfa841264ac6cb03b492886170c44a234b.json  query-b8d5d8ee07cb0db47b9097659c4376632a1f2273d2329ddbf071e64ea42580c6.json
migrations/: 20250518232436_create_tables.up.sql
scripts/: rainfrog.sh  start_postgresql.sh  stop_postgresql.sh  test_healthcheck.sh
src/: api.rs  component.rs  core.rs  db.rs  main.rs  page.rs  util.rs
src/search/: api.rs  core.rs  db.rs  mod.rs
src/systems/: mod.rs
src/ui/: component.rs  layout.rs  mod.rs  page.rs  snippet.rs  util.rs
templates/component/: log.html  navbar.html  search_rows.html  search_systems.html
templates/include/: dag_run.html  navbar.html  system.html  task.html  title.html
templates/layout/: base.html
(+4 files in other folders)
