[package]
name = "kyubey"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
