[package]
name = "kyubey"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
chrono = "0.4.40"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
poem = "3.1.9"
poem-openapi = { version = "5.1.13", features = ["chrono", "swagger-ui"] }
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
