[package]
name = "kyubey"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.4"
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["poem"] }
poem = { version = "3.1.10", features = ["embed"] }
poem-openapi = { version = "5.1.14", features = ["chrono", "swagger-ui"] }
rust-embed = "8.7.2"
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
